<resources>
    <string name="app_name">Swaddle</string>
    <string name="str__provider_note_">My provider wants to remind you to please bring the following to day care tomorrow:</string>
    <string name="str_allergie_not">If your child has allergies, please select Yes. Please choose from the list. Select Other and fill in the box if the allergy is not listed.</string>
    <string name="str_dayCareEnterNote">Please enter the time to help the provider plan the  days’ activities.</string>
    <string name="str_additional_adult_note">Please list the emails of the additional adults you would  like associated with your child’s profile. Theywill receive an invitation to join Swaddle. You will be able to edit  these people after your account is created.</string>
    <string name="str_custody_notes">If you select yes, your provider will receive a notification to obtain more information from you. Please provide a copy any custody agreement regarding the child enrolled in daycare.</string>
    <string name="str_cedu_not">"Brian Brunnet is currently a 5th year student in the Architectural Engineering Program at The Pennsylvania State University. "</string>
    <string name="str_invite_note">Invite people or parent to join Swaddle.\nThey will get a link to get register on\nSwaddle.</string>
    <string name="str_inspire_msg">Nam dapibus nisl vitae elit fringilla rutrum.  Aenean sollicitudin, erat a elementum  rutrum, neque sem pretium metus, quis  mollis nisl nunc et massa.</string>
    <string name="str_about_provider">Nam dapibus nisl vitae elit fringilla rutrum.  Aenean sollicitudin, erat a elementum  rutrum, neque sem pretium metus, quis  mollis nisl nunc et massa.</string>
    <string name="str_staff_invt">Invite your staff to join Swaddle. After clicking on the link, an email will be sent with instructions on completing the registration process.</string>
    <string name="str_attandance_dialog_desc">To check attendance data older than 2 weeks and print reports, pleas login at:</string>
    <string name="str_dummy_desc">The $79 i work 08 appears to be a good deal for anyone needing an affordable office suite for the mac Apple has finally spreed sheet application. At first  glance</string>
    <string name="str_payments">Payments</string>
    <string name="str_child_monthly_fee">Child Monthly Fee</string>
    <string name="str_due_on">Due on</string>
    <string name="str_dummy_data">apr, 2019</string>
    <string name="str_due">Due</string>
    <string name="str_dummy_price">$28,000</string>
    <string name="str_payment">Payment</string>
    <string name="str_balance">Balance</string>
    <string name="str_claytone">Theodore Clayton</string>
    <string name="str_claytone_dummy_value">Child Monthly Fee</string>
    <string name="str_type">Type</string>
    <string name="str_auto_pay">Auto pay</string>
    <string name="str_prayer">Prayer</string>
    <string name="str_memo">Memo</string>
    <string name="str_Payer">Payer</string>
    <string name="str_child_fee">Child Fee</string>
    <string name="str_sent_on">Sent on</string>
    <string name="str_amount">Amount</string>
    <string name="str_deposite">Deposite On</string>
    <string name="str_payment_method">Payment Method</string>
    <string name="str_payment_methods">ACH TRANSFER</string>
    <string name="str_to_account">To Account</string>
    <string name="str_dummy_account">x-40123 EAGLE BANK checking</string>
    <string name="str_bank_statement">Bank Statement</string>
    <string name="str_bank_statement_value">Will appear on your bank statement with the  fiollowing information</string>
    <string name="str_add_payment_methodes">Add Payment Method</string>
    <string name="str_select_method">Select Method:</string>
    <string name="str_visa">Visa</string>
    <string name="str_master_card">MasterCard</string>
    <string name="str_enter_card_detail">Enter Card Detail:</string>
    <string name="str_dummy_name">Boniface Esanji</string>
    <string name="str_dummy_number">1234 1233 42424 2424</string>
    <string name="str_mm_yy">MM/YY</string>
    <string name="str_cvc">CVC</string>
    <string name="str_default">Set Default Payment</string>
    <string name="str_account_address">Enter the account address</string>
    <string name="str_address">Address</string>
    <string name="str_dummy_address">604 Asia Station Suite 770</string>
    <string name="str_country">Country</string>
    <string name="str_dummy_coutry">USA</string>
    <string name="str_state">State</string>
    <string name="str_dummy_state">California</string>
    <string name="str_city">City</string>
    <string name="str_dummy_city">Los Angles</string>
    <string name="str_zip_code">ZipCode</string>
    <string name="str_dummy_zip_code">65948</string>
    <string name="str_Save">Save</string>
    <string name="str_dummy_card_number">123 123 123 123</string>
    <string name="str_default_payment">Default Payment</string>
    <string name="str_set_up_new_payment">Set up a new  payment method</string>
    <string name="str_payout">You’ll need to have an option ready to accept payouts you earn from selling.</string>
    <string name="str_continue">Continue</string>
    <string name="str_add_bill">Add Bill</string>
    <string name="str_generated_by">Generated By</string>
    <string name="str_due_date">Due Date</string>
    <string name="str_date">Feb 12, 2020</string>
    <string name="str_pice">100</string>
    <string name="str_upload_any_purchase">Upload Bills incase of any purchase</string>
    <string name="str_child_reading24_png">Child-reading24.png</string>
    <string name="str_choose_files">Choose Files</string>
    <string name="str_save_bill">Save Bill</string>
    <string name="str_notifications">All Notifications</string>
    <string name="str_add_card">Add Card</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_add_incident">Add Incident Report</string>
    <string name="tvupload_pic">Upload incident picture: <font color="#FB6F75">*Required</font> </string>
    <string name="str_upload">Upload</string>
    <string name="str_upload_date">Uploaded 01/05/21 5:09 AM</string>
    <string name="str_what_happened">What Happened *</string>
    <string name="str_dummy_reason">ex: Description of Accident - Specific are of the body- Any Exuipment involved</string>
    <string name="str_teacher_comments">Teacher Comments</string>
    <string name="str_teacher_comments_description">ex: Teacher completing report- How long ago did this happen?</string>
    <string name="str_treatment_given_description">ex: Teacher completing report- This treatment was given.</string>
    <string name="str_submit">SUBMIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="a_day_ago">a day ago</string>
    <string name="a_week_ago">a week ago</string>
    <string name="a_month_ago">a month ago</string>
    <string name="a_year_ago">a year ago</string>

    <string name="yesterday">yesterday</string>

    <string name="minutes">minute</string>
    <string name="hours">hours</string>
    <string name="days">horas</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <string name="ago">ago</string>

    <string name="minutes_ago">minutes ago</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="enter_your_text_here">Enter your text here...</string>
    <string name="write_a_review">Write A Review</string>
    <string name="title_activity_center_info_map">Map</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters_as_opposed_to_using_content_here_content_here_making_it_look_like_readable_english">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="str_add_update_msg">Add or Update Message</string>
    <string name="str_enter_message">Enter Message</string>

</resources>