<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvAddBill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/str_add_bill"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:background="?selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/viewFollow"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="@color/grey_600"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAddBill" />


                <TextView
                    android:id="@+id/tvAddCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/str_add_card"
                    android:background="?selectableItemBackground"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewFollow" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/str_cancel"
                android:background="?selectableItemBackground"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>