<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_round"
            android:paddingBottom="15dp">


            <TextView
                android:id="@+id/tvHead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/font_semi_bold"
                android:text="@string/str_add_update_msg"
                android:textColor="@color/grey_900"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="@id/ivCross"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHead" />


            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_cross"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/tvHead"
                app:tint="@color/red" />


            <TextView
                android:id="@+id/tvEnterMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/str_enter_message"
                android:textColor="@color/grey_700"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHead" />


            <EditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_et_classrooms"
                android:fontFamily="@font/font_regular"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:padding="10dp"
                android:textColor="@color/grey_900"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEnterMessage" />


            <TextView
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_btn_login"
                android:fontFamily="@font/font_semi_bold"
                android:foreground="?selectableItemBackground"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/str_submit"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etMessage"
                app:layout_constraintTop_toBottomOf="@id/etMessage" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</layout>